# test-assignments

./: README.md
adnuf/: .editorconfig  Adnuf.sln  README.md
albumprinter/: .gitignore  AlbumPrinter.sln  README.md  coverage.json
alphabet/: Alphabet.csproj  Alphabet.sln  Program.cs  README.md
alphabet/Properties/: AssemblyInfo.cs
blockchain-explorer/: Cargo.toml  README.md
blockchain-explorer/src/: api.rs  block.rs  main.rs
blockchain-explorer/src/storage/: lmdb.rs  memory.rs  mod.rs
chess/: README.md  README.txt
chess/Source/: ChessSample.sln
chess/Tools/: GitAddCommitPushRemote.bat  GitPullRemote.bat  RunSampleData.bat  SampleInput.txt  SampleOutput.txt
csv-pipeline/: .gitignore  Pronoodle.Products.sln  README.md  SampleData.csv
embark-user/: .dockerignore  Dockerfile  README.md  ormconfig.json  package-lock.json  package.json
embark-user/src/: app.ts  index.ts
embark-user/test/: app.test.ts
flatten-list/: FlattenList.csproj  FlattenList.sln  Program.cs  README.md
flatten-list/Properties/: AssemblyInfo.cs
movie-portal/: README.md  package.json
movie-portal-angular/: README.md  package.json  webpack.config.js
movie-portal-angular/test/: karma.conf.js
movie-portal-react/: README.md  package.json  webpack.config.js
movie-portal/angular/: README.md  (+1 more)
museum/: Museum.csproj  Museum.sln  Program.cs  README.md  Solver.cs
parking-house/: Nuget.config  Parking.sln  README.md
shopping-basket/: .gitignore  Gradilium.ShoppingBasket.sln  README.md
stopwatch/: README.md  Varus.Stopwatch.sln  assignment-azure.html
trawiller/: solution.md
(+361 files in other folders)
