[package]
name = "blockchain-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
json = "0.12"
lmdb = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
tempdir = "0.3"
thiserror = "1"

[[bin]]
name = "blockchain-explorer"
path = "src/main.rs"
